--- a/index.html
+++ b/index.html
@@ -89,19 +89,17 @@
 
     <main class="main-content">
         <h1>Enviar mensaje a +52 418-110-6552</h1>
-        <p>Haz clic en "Continuar al chat" para abrir WhatsApp e iniciar una conversación con este número.</p>
-        <textarea placeholder="Escribe un mensaje"></textarea>
+        <p>Haz clic en "Continuar al chat" para iniciar una conversación con este número.</p>
         <button class="send-button">
-            <svg class="send-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <line x1="22" y1="2" x2="11" y2="13"></line>
-                <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
-            </svg>
+            <a href="https://web.whatsapp.com/send/?phone=4181106552&text&type=phone_number&app_absent=0">
             Continuar al chat
+            </a>
         </button>
     </main>
 
     <footer class="footer">
-        <p>© 2023 WhatsApp LLC</p>
+        <p>&copy; 2025 WhatsApp LLC</p>
+        <p>&copy; 2025 Elias y Peña Abogados. Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
