--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
     <header class="header">
         <div class="header-content">
-            <img src="WA x EPA2.png" alt="Logo" class="logo">
+            <img src="WA x EPA2.png" width="auto" height="75" alt="Logo" class="logo">
         </div>
     </header>
 
