--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             align-items: center;
         }
         .logo {
-            width: 32px;
-            height: 32px;
+            width: 100%; /* O el valor que desees */
+            height: auto; /* Mantiene la relación de aspecto */
             margin-right: 10px;
         }
         .main-content {
@@ -83,7 +83,7 @@
 <body>
     <header class="header">
         <div class="header-content">
-            <img src="WA x EPA2.png" width="auto" height="75" alt="Logo" class="logo">
+            <img src="WA x EPA2.png" height="75" alt="Logo" class="logo">
         </div>
     </header>
 
