--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-mx-ctral">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enviar mensaje por WhatsApp</title>
+    <title>WhatsApp x Elias & Peña Abogados</title>
       <link rel="icon" href="https://abogados-elias-y-pena.github.io/Image1/WA%20x%20EPA.png" type="image/x-icon">
     <style>
         body {
@@ -11,6 +11,14 @@
             margin: 0;
             padding: 0;
             background-color: #f0f2f5;
+        }
+        .container:last-of-type a {
+            color: white;
+            text-decoration: none; /* Sin subrayado por defecto */
+        }
+        .container:last-of-type a:hover {
+             color: white;
+            text-decoration: underline; /* Subrayado al pasar el ratón */
         }
         .header {
             background-color: #00a884;
@@ -88,13 +96,27 @@
     </header>
 
     <main class="main-content">
-        <h1>Enviar mensaje a +52 418-110-6552</h1>
-        <p>Haz clic en "Continuar al chat" para iniciar una conversación con este número.</p>
-        <button class="send-button">
-            <a href="https://web.whatsapp.com/send/?phone=4181106552&text&type=phone_number&app_absent=0">
-            Continuar al chat
+        <div class="container">
+            <h1>Enviar mensaje a Hugo Elias</h1>
+            <p>Haz clic en "Continuar al chat" para iniciar una conversación con este número.</p>
+            <button class="send-button">
+                <a href="https://web.whatsapp.com/send/?phone=4181106552&text&type=phone_number&app_absent=0">
+                    Continuar al chat
+                </a>
+            </button>
+        </div>
+    </main>
+
+    <main class="main-content">
+        <div class="container">
+            <a href="https://www.whatsapp.com">
+                WhatsApp
+            <a>
+
+            <a href="https://abogados-elias-y-pena.github.io/inicio/">
+                Elias & Peña Abogados
             </a>
-        </button>
+        </div>
     </main>
 
     <footer class="footer">
