--- a/index.html
+++ b/index.html
@@ -109,13 +109,12 @@
 
     <main class="main-content">
         <div class="container">
-            <a href="https://www.whatsapp.com">
-                WhatsApp
-            <a>
-
-            <a href="https://abogados-elias-y-pena.github.io/inicio/">
-                Elias & Peña Abogados
-            </a>
+            <button class="send-button">
+                <a href="https://www.whatsapp.com">WhatsApp</a>
+            </button>
+            <button class="send-button">
+                <a href="https://abogados-elias-y-pena.github.io/inicio/">Elias & Peña Abogados</a>
+            </button>
         </div>
     </main>
 
