--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
             justify-content: center;
             width: 100%;
         }
+        .send-button2 {
+            background-color: white;
+            color: white;
+            border: none;
+            padding: 12px 24px;
+            border-radius: 24px;
+            font-size: 16px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+        }
         .send-button:hover {
             background-color: #128c7e;
         }
@@ -111,6 +124,8 @@
         <div class="container">
             <button class="send-button">
                 <a href="https://www.whatsapp.com">WhatsApp</a>
+            </button>
+            <button class="send-button2">
             </button>
             <button class="send-button">
                 <a href="https://abogados-elias-y-pena.github.io/inicio/">Elias & Peña Abogados</a>
